# okuulib

./: main.py  pyproject.toml
src/: config.py  main.py  models.py
src/ingestion/: chunk.py  clean.py  ingest.py  load_pdf.py  script.py
src/retrieval/: main.py
src/retrieval/prompts/: prompt_loader.py  rag_prompt.txt  system_prompt.txt
src/retrieval/services/: llm_service.py  rag_service.py
src/shared/: embedder.py  vector_store.py
src/shared/embedders/: dense_embedder.py  sparse_embedder.py
src/shared/qdrant/: vector_search.py  vector_store.py
